Display news content - Module News.

--- a/IFSoft/Content/admin.css
+++ b/IFSoft/Content/admin.css
@@ -7,8 +7,8 @@ div{
 }
 a{
     text-decoration: none;
-    color: black;
+    color: red !important;
 }
 a:hover{
-    color: red;
+    color: blue;
 }
