--- a/IFSoft/Site.Master
+++ b/IFSoft/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %></title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -25,15 +25,12 @@
 	<div class="header">
 		<div class="headertop_desc">
 			<div class="call">
-				 <p><span>Need help?</span> call us <span class="number">1-22-3456789</span></span></p>
+				 <p><span>Hỗ trợ</span> xin vui lòng gọi <span class="number">1-22-3456789</span></p>
 			</div>
 			<div class="account_desc">
 				<ul>
-					<li><a href="#">Register</a></li>
-					<li><a href="#">Login</a></li>
-					<li><a href="#">Delivery</a></li>
-					<li><a href="#">Checkout</a></li>
-					<li><a href="#">My Account</a></li>
+					<li><a href="#">Đăng ký</a></li>
+					<li><a href="#">Đăng nhập</a></li>
 				</ul>
 			</div>
 			<div class="clear"></div>
@@ -43,10 +40,10 @@
 				<a href="index.html"><img src="temp/images/logo.png" alt="" /></a>
 			</div>
 			  <div class="cart">
-			  	   <p>Welcome to our Online Store! <span>Cart:</span><div id="dd" class="wrapper-dropdown-2"> 0 item(s) - $0.00
-			  	   	<ul class="dropdown">
+			  	   <p>Giỏ hàng của bạn<div id="dd" class="wrapper-dropdown-2"> 0 sản phẩm - 0.00 VNĐ
+			  	   	<%--<ul class="dropdown">
 							<li>you have no items in your Shopping cart</li>
-					</ul></div></p>
+					</ul>--%></div></p>
 			  </div>
 			  <script type="text/javascript">
 			function DropDown(el) {
@@ -81,11 +78,10 @@
 	<div class="header_bottom">
 	     	<div class="menu">
 	     		<ul>
-			    	<li class="active"><a href="index.html">Home</a></li>
-			    	<li><a href="about.html">About</a></li>
-			    	<li><a href="delivery.html">Delivery</a></li>
-			    	<li><a href="news.html">News</a></li>
-			    	<li><a href="contact.html">Contact</a></li>
+			    	<li class="active"><a href="index.html">Trang chủ</a></li>
+			    	<li><a href="about.html">Giới thiệu</a></li>
+			    	<li><a href="news.html">Tin tức & sự kiện</a></li>
+			    	<li><a href="contact.html">Liên hệ</a></li>
 			    	<div class="clear"></div>
      			</ul>
 	     	</div>
@@ -100,7 +96,7 @@
 			<div class="header_bottom_left">				
 				<div class="categories">
 				  <ul>
-				  	<h3>Categories</h3>
+				  	<h3>Sản phẩm</h3>
 				      <li><a href="#">Mobile Phones</a></li>
 				      <li><a href="#">Desktop</a></li>
 				      <li><a href="#">Laptop</a></li>
@@ -307,57 +303,45 @@
    	  <div class="wrap">	
 	     <div class="section group">
 				<div class="col_1_of_4 span_1_of_4">
-						<h4>Information</h4>
+						<h4>Thông tin</h4>
 						<ul>
-						<li><a href="about.html">About Us</a></li>
-						<li><a href="contact.html">Customer Service</a></li>
-						<li><a href="#">Advanced Search</a></li>
-						<li><a href="delivery.html">Orders and Returns</a></li>
-						<li><a href="contact.html">Contact Us</a></li>
+						<li><a href="about.html">Về chúng tôi</a></li>
+						<li><a href="contact.html">Dịch vụ khách hàng</a></li>
+						<li><a href="delivery.html">Cách vận chuyển</a></li>
+						<li><a href="contact.html">Liên hệ với chúng tôi</a></li>
 						</ul>
 					</div>
 				<div class="col_1_of_4 span_1_of_4">
-					<h4>Why buy from us</h4>
+					<h4>Tại sao mua hàng của chúng tôi</h4>
 						<ul>
-						<li><a href="about.html">About Us</a></li>
-						<li><a href="contact.html">Customer Service</a></li>
-						<li><a href="#">Privacy Policy</a></li>
+						<li><a href="about.html">Giao dịch tốt nhất</a></li>
 						<li><a href="contact.html">Site Map</a></li>
-						<li><a href="#">Search Terms</a></li>
 						</ul>
 				</div>
 				<div class="col_1_of_4 span_1_of_4">
-					<h4>My account</h4>
-						<ul>
-							<li><a href="contact.html">Sign In</a></li>
-							<li><a href="index.html">View Cart</a></li>
-							<li><a href="#">My Wishlist</a></li>
-							<li><a href="#">Track My Order</a></li>
-							<li><a href="contact.html">Help</a></li>
-						</ul>
+					<h4>Liên hệ</h4>
+					<ul>
+						<li><span>+91-123-456789</span></li>
+						<li><span>+00-123-000000</span></li>
+					</ul>
 				</div>
 				<div class="col_1_of_4 span_1_of_4">
-					<h4>Contact</h4>
-						<ul>
-							<li><span>+91-123-456789</span></li>
-							<li><span>+00-123-000000</span></li>
-						</ul>
-						<div class="social-icons">
-							<h4>Follow Us</h4>
-					   		  <ul>
-							      <li><a href="#" target="_blank"><img src="temp/temp/images/facebook.png" alt="" /></a></li>
-							      <li><a href="#" target="_blank"><img src="temp/images/twitter.png" alt="" /></a></li>
-							      <li><a href="#" target="_blank"><img src="temp/images/skype.png" alt="" /> </a></li>
-							      <li><a href="#" target="_blank"> <img src="temp/images/dribbble.png" alt="" /></a></li>
-							      <li><a href="#" target="_blank"> <img src="temp/images/linkedin.png" alt="" /></a></li>
-							      <div class="clear"></div>
-						     </ul>
-   	 					</div>
+					<div class="social-icons">
+						<h4>Liên kết với chúng tôi</h4>
+					   		<ul>
+							    <li><a href="#" target="_blank"><img src="temp/temp/images/facebook.png" alt="" /></a></li>
+							    <li><a href="#" target="_blank"><img src="temp/images/twitter.png" alt="" /></a></li>
+							    <li><a href="#" target="_blank"><img src="temp/images/skype.png" alt="" /> </a></li>
+							    <li><a href="#" target="_blank"> <img src="temp/images/dribbble.png" alt="" /></a></li>
+							    <li><a href="#" target="_blank"> <img src="temp/images/linkedin.png" alt="" /></a></li>
+							    <div class="clear"></div>
+						    </ul>
+   	 				</div>
 				</div>
 			</div>			
         </div>
         <div class="copy_right">
-				<p>&copy; 2013 home_shoppe. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+				<p>&copy; Bản quyền thuộc về công ty HOME SHOPPE | Thiết kế bởi <a href="/">Home Shoppe</a></p>
 		   </div>
     </div>
     <script type="text/javascript">
