--- a/IFSoft/Content/Site.css
+++ b/IFSoft/Content/Site.css
@@ -2,6 +2,7 @@
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 /* Wrapping element */
@@ -29,3 +30,6 @@ textarea {
         padding: 0;
     }
 }
+
+a.title{font-weight:bold;color:black;}
+a.title:hover{color:red;}
