--- a/IFSoft/Site.Master
+++ b/IFSoft/Site.Master
@@ -14,6 +14,7 @@
 
 	<link href="temp/css/style.css" rel="stylesheet" type="text/css" media="all"/>
 	<link href="temp/css/slider.css" rel="stylesheet" type="text/css" media="all"/>
+	<link href="Content/Site.css" rel="stylesheet" type="text/css"/>
 	<script type="text/javascript" src="temp/js/jquery-1.7.2.min.js"></script> 
 	<script type="text/javascript" src="temp/js/move-top.js"></script>
 	<script type="text/javascript" src="temp/js/easing.js"></script>
@@ -78,10 +79,10 @@
 	<div class="header_bottom">
 	     	<div class="menu">
 	     		<ul>
-			    	<li class="active"><a href="index.html">Trang chủ</a></li>
+			    	<li class="active"><a href="/">Trang chủ</a></li>
 			    	<li><a href="about.html">Giới thiệu</a></li>
-			    	<li><a href="news.html">Tin tức & sự kiện</a></li>
-			    	<li><a href="contact.html">Liên hệ</a></li>
+			    	<li><a href="?f=news">Tin tức & sự kiện</a></li>
+			    	<li><a href="?f=contact">Liên hệ</a></li>
 			    	<div class="clear"></div>
      			</ul>
 	     	</div>
