--- a/IFSoft/Site.Master
+++ b/IFSoft/Site.Master
@@ -8,93 +8,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%: Page.Title %></title>
 
-    <asp:PlaceHolder runat="server">
+    <%--<asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
-    </asp:PlaceHolder>
+    </asp:PlaceHolder>--%>
 
-	<link href="temp/css/style.css" rel="stylesheet" type="text/css" media="all"/>
-	<link href="temp/css/slider.css" rel="stylesheet" type="text/css" media="all"/>
-	<link href="Content/Site.css" rel="stylesheet" type="text/css"/>
-	<script type="text/javascript" src="temp/js/jquery-1.7.2.min.js"></script> 
-	<script type="text/javascript" src="temp/js/move-top.js"></script>
-	<script type="text/javascript" src="temp/js/easing.js"></script>
-	<script type="text/javascript" src="temp/js/startstop-slider.js"></script>
+    <link href="temp/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="temp/css/slider.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="Content/Site.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="temp/js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="temp/js/move-top.js"></script>
+    <script type="text/javascript" src="temp/js/easing.js"></script>
+    <script type="text/javascript" src="temp/js/startstop-slider.js"></script>
 
 </head>
 <body>
-	<form runat="server">
-    <div class="wrap">
-	<div class="header">
-		<div class="headertop_desc">
-			<div class="call">
-				 <p><span>Hỗ trợ</span> xin vui lòng gọi <span class="number">1-22-3456789</span></p>
-			</div>
-			<div class="account_desc">
-				<ul>
-					<li><a href="#">Đăng ký</a></li>
-					<li><a href="#">Đăng nhập</a></li>
-				</ul>
-			</div>
-			<div class="clear"></div>
-		</div>
-		<div class="header_top">
-			<div class="logo">
-				<a href="index.html"><img src="temp/images/logo.png" alt="" /></a>
-			</div>
-			  <div class="cart">
-			  	   <p>Giỏ hàng của bạn<div id="dd" class="wrapper-dropdown-2"> 0 sản phẩm - 0.00 VNĐ
+    <%--<form runat="server">--%>
+        <div class="wrap">
+            <div class="header">
+                <div class="headertop_desc">
+                    <div class="call">
+                        <p><span>Hỗ trợ</span> xin vui lòng gọi <span class="number">1-22-3456789</span></p>
+                    </div>
+                    <div class="account_desc">
+                        <ul>
+                            <li><a href="#">Đăng ký</a></li>
+                            <li><a href="#">Đăng nhập</a></li>
+                        </ul>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="header_top">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="temp/images/logo.png" alt="" /></a>
+                    </div>
+                    <div class="cart">
+                        <p>
+                            Giỏ hàng của bạn<div id="dd" class="wrapper-dropdown-2">
+                                0 sản phẩm - 0.00 VNĐ
 			  	   	<%--<ul class="dropdown">
 							<li>you have no items in your Shopping cart</li>
-					</ul>--%></div></p>
-			  </div>
-			  <script type="text/javascript">
-			function DropDown(el) {
-				this.dd = el;
-				this.initEvents();
-			}
-			DropDown.prototype = {
-				initEvents : function() {
-					var obj = this;
+					</ul>--%>
+                            </div>
+                        </p>
+                    </div>
+                    <script type="text/javascript">
+                        function DropDown(el) {
+                            this.dd = el;
+                            this.initEvents();
+                        }
+                        DropDown.prototype = {
+                            initEvents: function () {
+                                var obj = this;
 
-					obj.dd.on('click', function(event){
-						$(this).toggleClass('active');
-						event.stopPropagation();
-					});	
-				}
-			}
+                                obj.dd.on('click', function (event) {
+                                    $(this).toggleClass('active');
+                                    event.stopPropagation();
+                                });
+                            }
+                        }
 
-			$(function() {
+                        $(function () {
 
-				var dd = new DropDown( $('#dd') );
+                            var dd = new DropDown($('#dd'));
 
-				$(document).click(function() {
-					// all dropdowns
-					$('.wrapper-dropdown-2').removeClass('active');
-				});
+                            $(document).click(function () {
+                                // all dropdowns
+                                $('.wrapper-dropdown-2').removeClass('active');
+                            });
 
-			});
+                        });
 
-		</script>
-	 <div class="clear"></div>
-  </div>
-	<div class="header_bottom">
-	     	<div class="menu">
-	     		<ul>
-			    	<li class="active"><a href="/">Trang chủ</a></li>
-			    	<li><a href="about.html">Giới thiệu</a></li>
-			    	<li><a href="?f=news">Tin tức & sự kiện</a></li>
-			    	<li><a href="?f=contact">Liên hệ</a></li>
-			    	<div class="clear"></div>
-     			</ul>
-	     	</div>
-	     	<div class="search_box">
-	     		<form>
-	     			<input type="text" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}"><input type="submit" value="">
-	     		</form>
-	     	</div>
-	     	<div class="clear"></div>
-	     </div>	     
-	<%--<div class="header_slide">
+                    </script>
+                    <div class="clear"></div>
+                </div>
+                <div class="header_bottom">
+                    <div class="menu">
+                        <ul>
+                            <li class="active"><a href="/">Trang chủ</a></li>
+                            <li><a href="about.html">Giới thiệu</a></li>
+                            <li><a href="?f=news">Tin tức & sự kiện</a></li>
+                            <li><a href="?f=contact">Liên hệ</a></li>
+                            <div class="clear"></div>
+                        </ul>
+                    </div>
+                    <div class="search_box">
+                        <form>
+                            <input type="text" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}"><input type="submit" value="">
+                        </form>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+                
+                <%--<div class="header_slide">
 			<div class="header_bottom_left">				
 				<div class="categories">
 				  <ul>
@@ -168,8 +174,9 @@
 		   <div class="clear"></div>
 		</div>
    </div>--%>
-		
- <%--<div class="main">
+
+
+                <%--<div class="main">
     <div class="content">
     	<div class="content_top">
     		<div class="heading">
@@ -302,65 +309,71 @@
     </div>
  </div>
 </div>--%>
-   <div class="footer">
-   	  <div class="wrap">	
-	     <div class="section group">
-				<div class="col_1_of_4 span_1_of_4">
-						<h4>Thông tin</h4>
-						<ul>
-						<li><a href="about.html">Về chúng tôi</a></li>
-						<li><a href="contact.html">Dịch vụ khách hàng</a></li>
-						<li><a href="delivery.html">Cách vận chuyển</a></li>
-						<li><a href="contact.html">Liên hệ với chúng tôi</a></li>
-						</ul>
-					</div>
-				<div class="col_1_of_4 span_1_of_4">
-					<h4>Tại sao mua hàng của chúng tôi</h4>
-						<ul>
-						<li><a href="about.html">Giao dịch tốt nhất</a></li>
-						<li><a href="contact.html">Site Map</a></li>
-						</ul>
-				</div>
-				<div class="col_1_of_4 span_1_of_4">
-					<h4>Liên hệ</h4>
-					<ul>
-						<li><span>+91-123-456789</span></li>
-						<li><span>+00-123-000000</span></li>
-					</ul>
-				</div>
-				<div class="col_1_of_4 span_1_of_4">
-					<div class="social-icons">
-						<h4>Liên kết với chúng tôi</h4>
-					   		<ul>
-							    <li><a href="#" target="_blank"><img src="temp/temp/images/facebook.png" alt="" /></a></li>
-							    <li><a href="#" target="_blank"><img src="temp/images/twitter.png" alt="" /></a></li>
-							    <li><a href="#" target="_blank"><img src="temp/images/skype.png" alt="" /> </a></li>
-							    <li><a href="#" target="_blank"> <img src="temp/images/dribbble.png" alt="" /></a></li>
-							    <li><a href="#" target="_blank"> <img src="temp/images/linkedin.png" alt="" /></a></li>
-							    <div class="clear"></div>
-						    </ul>
-   	 				</div>
-				</div>
-			</div>			
-        </div>
-        <div class="copy_right">
-				<p>&copy; Bản quyền thuộc về công ty HOME SHOPPE | Thiết kế bởi <a href="/">Home Shoppe</a></p>
-		   </div>
-    </div>
-    <script type="text/javascript">
-		$(document).ready(function() {			
-			$().UItoTop({ easingType: 'easeOutQuart' });
-			
-		});
-	</script>
-    <a href="#" id="toTop"><span id="toTopHover"> </span></a>
-	<asp:ContentPlaceHolder ID="MainContent" runat="server">
-            </asp:ContentPlaceHolder>
+                <div class="footer">
+                    <div class="wrap">
+                        <div class="section group">
+                            <div class="col_1_of_4 span_1_of_4">
+                                <h4>Thông tin</h4>
+                                <ul>
+                                    <li><a href="about.html">Về chúng tôi</a></li>
+                                    <li><a href="contact.html">Dịch vụ khách hàng</a></li>
+                                    <li><a href="delivery.html">Cách vận chuyển</a></li>
+                                    <li><a href="contact.html">Liên hệ với chúng tôi</a></li>
+                                </ul>
+                            </div>
+                            <div class="col_1_of_4 span_1_of_4">
+                                <h4>Tại sao mua hàng của chúng tôi</h4>
+                                <ul>
+                                    <li><a href="about.html">Giao dịch tốt nhất</a></li>
+                                    <li><a href="contact.html">Site Map</a></li>
+                                </ul>
+                            </div>
+                            <div class="col_1_of_4 span_1_of_4">
+                                <h4>Liên hệ</h4>
+                                <ul>
+                                    <li><span>+91-123-456789</span></li>
+                                    <li><span>+00-123-000000</span></li>
+                                </ul>
+                            </div>
+                            <div class="col_1_of_4 span_1_of_4">
+                                <div class="social-icons">
+                                    <h4>Liên kết với chúng tôi</h4>
+                                    <ul>
+                                        <li><a href="#" target="_blank">
+                                            <img src="temp/temp/images/facebook.png" alt="" /></a></li>
+                                        <li><a href="#" target="_blank">
+                                            <img src="temp/images/twitter.png" alt="" /></a></li>
+                                        <li><a href="#" target="_blank">
+                                            <img src="temp/images/skype.png" alt="" />
+                                        </a></li>
+                                        <li><a href="#" target="_blank">
+                                            <img src="temp/images/dribbble.png" alt="" /></a></li>
+                                        <li><a href="#" target="_blank">
+                                            <img src="temp/images/linkedin.png" alt="" /></a></li>
+                                        <div class="clear"></div>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="copy_right">
+                        <p>&copy; Bản quyền thuộc về công ty HOME SHOPPE | Thiết kế bởi <a href="/">Home Shoppe</a></p>
+                    </div>
+                </div>
+                <script type="text/javascript">
+                    $(document).ready(function () {
+                        $().UItoTop({ easingType: 'easeOutQuart' });
+
+                    });
+                </script>
+                <a href="#" id="toTop"><span id="toTopHover"></span></a>
+                <asp:ContentPlaceHolder ID="MainContent" runat="server">
+                </asp:ContentPlaceHolder>
+
+                <%--</form>--%>
 
 
-
-
-    <%--<form runat="server">
+                <%--<form runat="server">
         <asp:ScriptManager runat="server">
             <Scripts>--%>
                 <%--To learn more about bundling scripts in ScriptManager see https://go.microsoft.com/fwlink/?LinkID=301884 --%>
@@ -378,7 +391,7 @@
                 <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
                 <asp:ScriptReference Name="WebFormsBundle" />--%>
                 <%--Site Scripts--%>
-            <%--</Scripts>
+                <%--</Scripts>
         </asp:ScriptManager>
 
         <div class="navbar navbar-inverse navbar-fixed-top">
@@ -410,6 +423,6 @@
         </div>
 
     </form>--%>
-</form>
+    
 </body>
 </html>
